package seedu.duke.module.lessons;

public class Others extends Lesson {
    public Others(String day, String startTime, String endTime, String lessonType) {
        super(day, startTime, endTime, lessonType);
    }
}
